# freecad

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
main/: bulk.py  input_files.py  main.py  planarize.py  supporting_functions.py
sample_files/: README.md
sample_files/case_02_via_cut/: case_02_via_cut.txt  case_02_via_cut.xs
sample_files/case_03_bias_taper/: case_03_bias_taper.lyp
sample_files/case_04_planarize/: case_04_planarize.lyp  case_04_planarize.txt
sample_files/test_cases/: README.md
sample_files/test_cases/case_01_basic_stack/: case_01_basic_stack.lyp  case_01_basic_stack.txt  case_01_basic_stack.xs
sample_files/test_cases/case_02_via_cut/: case_02_via_cut.lyp
sample_files/test_cases/case_03_bias_taper/: case_03_bias_taper.txt  case_03_bias_taper.xs
sample_files/test_cases/case_04_planarize/: case_04_planarize.xs
