[project]
name = "gds2-converter-3d"
version = "0.2.0"
description = "FreeCAD macro that converts 2D KLayout/GDS2 layouts into 3D STEP models using XSection scripts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "Amorphyx, Inc." }]
keywords = ["freecad", "gds2", "klayout", "xsection", "step", "3d"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
dev = ["pyright>=1.1.350", "ruff>=0.4.0"]

[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
  "E501",
  "E741",
]

[tool.ruff.lint.per-file-ignores]
"main/main.py" = ["F401", "F811"]
